--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,3 +8,7 @@ Change Log
 0.0.5 (19/04/2023)
 ------------------
 - Rearranging packages.
+
+0.0.6 (19/04/2023)
+------------------
+- More fields for the StateAFD class.
