--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -16,3 +16,7 @@ Change Log
 0.0.7 (23/04/2023)
 ------------------
 - Additions for AFN simulation.
+
+0.0.8 (24/04/2023)
+------------------
+- Fixes.
