--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -20,3 +20,7 @@ Change Log
 0.0.8 (24/04/2023)
 ------------------
 - Fixes.
+
+0.0.9 (24/04/2023)
+------------------
+- Show errors in order from LexEval.
